# cps

./: .gitignore  CMakeLists.txt  README.md  a.bat  circle.cpp  install.sh  models.cpp  polygon.cpp  shape.cpp  test.ps
headers/: circle.h  composite.h  compoundVertical.h  models.h  polygon.h  rectangle.h  scale.h  shape.h  triangle.h
ps-example/: circle.ps  convert.sh  polygon.ps
source/: circle.cpp  composite.cpp  main.cpp  models.cpp  polygon.cpp  rectangle.cpp  shape.cpp  triangle.cpp
tests/: test-circle.cpp  test-composite.cpp  test-polygon.cpp  test-rectangle.cpp  test-scale.cpp  test-shape.cpp  test-translation.cpp  test-triangle.cpp
